--- a/package.json
+++ b/package.json
@@ -7,13 +7,31 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "postinstall": "npm run build",
+    "start": "node server.js"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Evangelos Tsipis",
+    "email": "etsipis@terracognita.eu"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/firvain/terrarum.git"
   },
   "dependencies": {
+    "colormap": "^2.3.1",
     "core-js": "^2.6.5",
+    "jspdf": "^1.5.3",
     "vue": "^2.6.10",
+    "vue-country-flag": "^1.1.1",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue2-filters": "^0.6.0",
+    "vuelayers": "^0.11.4",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.0.1",
+    "vuex-i18n": "^1.11.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
@@ -30,6 +48,15 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1",
+    "yarn": "1.15.2"
   }
 }
