--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "colormap": "^2.3.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
     "jspdf": "^1.5.3",
